# AeonX

./: .asm-lsp.toml  .gitignore  Cargo.toml  GNUmakefile  Makefile  README.md  TODO.txt  clean  create_iso.wcsh  limine.conf  linker.lds  mkiso  x86_64-unknown-none.json
docs/: cpp-rules.html
kernel/: Cargo.toml  x86_64-unknown-none.json
kernel/.cargo/: config.toml
kernel/comp/impl/: string.c
kernel/comp/kconfig/: kconfig.l
kernel/core/: boot.c  entry.S  kern.s  kernel.c  kernel.h
kernel/dev/cpu/: gdt.c  mp.c
kernel/dev/disk/: Cargo.toml
kernel/dev/memory/: Cargo.toml  memintern.h
kernel/dev/scrn/: Cargo.toml  bitmap.c  internelscrn.h  scrn.c  scrn.h  scrn.s  write_text.c
kernel/fs/fat16/: Cargo.toml
kernel/fs/fusefs/: Cargo.toml
kernel/kstd/: Cargo.toml
kernel/kstd/src/: err.rs  lib.rs
kernel/libkrn/: string.h
kernel/src/: boot.rs  main.rs
src/kernel/asm/: x86_64.asm  x86_64.h
src/kernel/core/: boot.c  entry.S  entry.asm  entry.s  kern.S  kern.s  kern32.zig  kern64.cxx  kern64.h  kern64.h.pch  kernel.c  kernel.h  rust.rs
src/kernel/dev/: dev.rs
src/kernel/libc/: string.c  string.h
src/kernel/libkrn/: alloc.h  bindings.rs  cxtype.hxx  err.zig  smartptr.h  smartptr.hxx  string.c  string.h  string.hxx  type.h  type.rs
src/kernel/rust/: Cargo.toml  x86_64-unknown-none.json
src/kernel/rust/dev/cpu/src/: atomic.rs  lib.rs
src/kernel/rust/dev/scrn/: Cargo.toml
src/kernel/rust/dev/scrn/src/: lib.rs
src/kernel/rust/libkstd/: Cargo.toml
src/kernel/rust/src/: lib.rs
src/lib/libcxx/: __build_in.hxx  thread.hxx
(+49 files in other folders)
